--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "product-manage-system",
+  "name": "library-manage-system",
   "version": "1.0.0",
   "main": "app.js",
-  "scripts": {
-    "test": "jest"
-  },
   "repository": {
     "type": "git",
-    "url": "Product Management System"
+    "url": "Library Management System"
   },
   "author": "Benson Christopher",
   "license": "ISC",
@@ -16,13 +13,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "fs": "^0.0.1-security",
-    "get-port": "^7.1.0",
-    "mongoose": "^8.7.2",
-    "swagger-ui-express": "^5.0.1"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "mongoose": "^8.7.2"
   }
 }
